// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotchedBase /> should match snapshot for active notch 1`] = `
<div
  class="notchedBase notchedBaseShift notchedBaseActive"
>
  <div
    class="notchedBaseBorder"
  >
    <div
      class="notchedBaseBorderLeading"
    />
    <div
      class="notchedBaseBorderNotch"
      style="width:8px"
    >
      <label
        class="notchedBasePlaceholder"
      >
        Hello World!
      </label>
    </div>
    <div
      class="notchedBaseBorderTrailing"
    />
  </div>
</div>
`;

exports[`<NotchedBase /> should match snapshot for default notch 1`] = `
<div
  class="notchedBase notchedBaseShift"
>
  <div
    class="notchedBaseBorder"
  >
    <div
      class="notchedBaseBorderLeading"
    />
    <div
      class="notchedBaseBorderNotch"
      style="width:8px"
    >
      <label
        class="notchedBasePlaceholder"
      >
        Hello World!
      </label>
    </div>
    <div
      class="notchedBaseBorderTrailing"
    />
  </div>
</div>
`;

exports[`<NotchedBase /> should match snapshot for dirty and active notch 1`] = `
<div
  class="notchedBase notchedBaseShift notchedBaseActive"
>
  <div
    class="notchedBaseBorder"
  >
    <div
      class="notchedBaseBorderLeading"
    />
    <div
      class="notchedBaseBorderNotch"
      style="width:8px"
    >
      <label
        class="notchedBasePlaceholder"
      >
        Hello World!
      </label>
    </div>
    <div
      class="notchedBaseBorderTrailing"
    />
  </div>
</div>
`;

exports[`<NotchedBase /> should match snapshot for dirty notch 1`] = `
<div
  class="notchedBase notchedBaseShift"
>
  <div
    class="notchedBaseBorder"
  >
    <div
      class="notchedBaseBorderLeading"
    />
    <div
      class="notchedBaseBorderNotch"
      style="width:8px"
    >
      <label
        class="notchedBasePlaceholder"
      >
        Hello World!
      </label>
    </div>
    <div
      class="notchedBaseBorderTrailing"
    />
  </div>
</div>
`;
